--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,8 @@ pytest
 parameterized
 pylint
 black # we test that the code is correctly formatted
+
+# Docs
+
+sphinx==7.1.2
+sphinx-rtd-theme==1.3.0rc1
